export type FormData = {
  username: string;
  password: string;
};

export const SignInStrings = {
  header: 'Practical Test',
  forgot_password: 'Forgot Password?',
  terms_and_conditions: 'Terms and Conditions',
};
